Fix select dropdown: dark option background, custom arrow, readable text

--- a/src/index.css
+++ b/src/index.css
@@ -744,6 +744,21 @@ select {
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.03);
 }
 
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='8'%3E%3Cpath d='M1 1l5 5 5-5' stroke='%23aab' fill='none' stroke-width='1.5'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 14px center;
+  padding-right: 36px;
+}
+
+select option {
+  background: #1a1f30;
+  color: #f5f7fb;
+  padding: 8px 12px;
+}
+
 input[type='checkbox'] {
   width: 18px;
   height: 18px;
